Add 15 data quality analyzers

--- a/PySparkAnalyzer.ipynb
+++ b/PySparkAnalyzer.ipynb
@@ -20,7 +20,8 @@
    "source": [
     "import pydeequ\n",
     "from pydeequ.analyzers import *\n",
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import countDistinct, count, col, lit"
    ]
   },
   {
@@ -42,15 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.parquet('./data/data.parquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = spark.read.parquet('./data/data.parquet')\n",
     "df.printSchema()"
    ]
   },
@@ -70,7 +63,20 @@
     "analyzer = AnalysisRunner(spark)\\\n",
     "    .onData(df)\\\n",
     "    .addAnalyzer(Size())\\\n",
+    "    .addAnalyzer(Completeness('id'))\\\n",
+    "    .addAnalyzer(Completeness('vendor_code'))\\\n",
     "    .addAnalyzer(Completeness('name'))\\\n",
+    "    .addAnalyzer(Completeness('type'))\\\n",
+    "    .addAnalyzer(Completeness('label'))\\\n",
+    "    .addAnalyzer(Completeness('price'))\\\n",
+    "    .addAnalyzer(Completeness('discount'))\\\n",
+    "    .addAnalyzer(Completeness('available_count'))\\\n",
+    "    .addAnalyzer(Completeness('preorder_count'))\\\n",
+    "    .addAnalyzer(Compliance('discount less than 0', 'discount<0'))\\\n",
+    "    .addAnalyzer(Compliance('discount greater than 100', 'discount>100'))\\\n",
+    "    .addAnalyzer(Compliance('availiable_count less than 0', 'available_count<0'))\\\n",
+    "    .addAnalyzer(Compliance('preorder_count less than 0', 'preorder_count<0'))\\\n",
+    "    .addAnalyzer(Distinctness('id'))\\\n",
     "    .run()"
    ]
   },
@@ -89,13 +95,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "success_metrics_df.show()"
+    "success_metrics_df.toPandas()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('venv': venv)",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +120,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2a220009da6296707d86de1d7d0d774e2b99758a737b67e4e25d65a91c538ba3"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
